--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="row">
           <div class="col-lg-6">
             <img
-              src="caminho/para/imagem.jpg"
+              src="https://via.placeholder.com/800x400?text=imagem da Loja"
               alt="Imagem da Loja"
               class="img-fluid"
             />
